spacing fix

--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,7 @@ html:{
   background:#191919;
   padding: 10px 0;
   transform: rotate(-1.97deg);
+  margin-bottom: 120px;
 }
 
 .scroller-inner {
@@ -70,6 +71,7 @@ html:{
   gap: 40px;
   width: max-content;
   animation: scroll 15s linear infinite;
+  margin-bottom: 120px;
 }
 
 .scroller-inner span {
